; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-sx150x.c_sx150x_gpio_direction_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-sx150x.c_sx150x_gpio_direction_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.sx150x_pinctrl = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32, i32)* @sx150x_gpio_direction_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sx150x_gpio_direction_output(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpio_chip*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.sx150x_pinctrl*, align 8
  %9 = alloca i32, align 4
  store %struct.gpio_chip* %0, %struct.gpio_chip** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.gpio_chip*, %struct.gpio_chip** %5, align 8
  %11 = call %struct.sx150x_pinctrl* @gpiochip_get_data(%struct.gpio_chip* %10)
  store %struct.sx150x_pinctrl* %11, %struct.sx150x_pinctrl** %8, align 8
  %12 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i64 @sx150x_pin_is_oscio(%struct.sx150x_pinctrl* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %8, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @sx150x_gpio_oscio_set(%struct.sx150x_pinctrl* %17, i32 %18)
  store i32 %19, i32* %4, align 4
  br label %41

20:                                               ; preds = %3
  %21 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %8, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @__sx150x_gpio_set(%struct.sx150x_pinctrl* %21, i32 %22, i32 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32, i32* %9, align 4
  store i32 %28, i32* %4, align 4
  br label %41

29:                                               ; preds = %20
  %30 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %8, align 8
  %31 = getelementptr inbounds %struct.sx150x_pinctrl, %struct.sx150x_pinctrl* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %8, align 8
  %34 = getelementptr inbounds %struct.sx150x_pinctrl, %struct.sx150x_pinctrl* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @BIT(i32 %38)
  %40 = call i32 @regmap_write_bits(i32 %32, i32 %37, i32 %39, i32 0)
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %29, %27, %16
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local %struct.sx150x_pinctrl* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i64 @sx150x_pin_is_oscio(%struct.sx150x_pinctrl*, i32) #1

declare dso_local i32 @sx150x_gpio_oscio_set(%struct.sx150x_pinctrl*, i32) #1

declare dso_local i32 @__sx150x_gpio_set(%struct.sx150x_pinctrl*, i32, i32) #1

declare dso_local i32 @regmap_write_bits(i32, i32, i32, i32) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
